--- a/conda-recipes/llvmdev/conda_build_config.yaml
+++ b/conda-recipes/llvmdev/conda_build_config.yaml
@@ -1,17 +1,15 @@
 # Numba/llvmlite stack needs an older compiler for backwards compatability.
 c_compiler_version:         # [linux or osx]
-  - 7                       # [linux and (x86_64 or ppc64le)]
-  - 11                      # [linux and aarch64]
+  - 11                      # [linux]
   - 14                      # [osx]
 
 cxx_compiler_version:       # [linux or osx]
-  - 7                       # [linux and (x86_64 or ppc64le)]
-  - 11                      # [linux and aarch64]
+  - 11                      # [linux]
   - 14                      # [osx]
 
-fortran_compiler_version:   # [linux]
-  - 7                       # [linux and (x86_64 or ppc64le)]
-  - 11                      # [linux and aarch64]
+fortran_compiler_version:   # [linux or osx]
+  - 11                      # [linux]
+  - 14                      # [osx]
 
 c_compiler:              # [win]
   - vs2022               # [win]
