--- a/.github/workflows/llvmlite_conda_builder.yml
+++ b/.github/workflows/llvmlite_conda_builder.yml
@@ -1,21 +1,6 @@
 # llvmlite Conda Builder Workflow
-# 
-# This workflow builds conda packages for llvmlite across multiple platforms.
-# 
-# Triggers:
-# - Push to main branch
-# - Pull requests (for path changes)
-# - Manual workflow dispatch
-# - Comment trigger: "/gha run conda [<llvmdev_run_id>]" (SECURE)
-#
-# Comment Trigger Security:
-# - Only repository collaborators with write/admin access can use comment triggers
-# - This prevents untrusted fork contributors from accessing repository secrets
-# - Permission denied attempts receive a 😕 reaction and explanation comment
-#
-# Usage examples:
-# - "/gha run conda" - Build all platforms
-# - "/gha run conda 1234567890" - Build with specific llvmdev workflow run ID
+# Builds conda packages across multiple platforms
+# Triggers: push to main, PRs, manual dispatch, comment "/gha run conda [<llvmdev_run_id>]"
 
 name: llvmlite_conda_builder
 
@@ -48,7 +33,6 @@ on:
           - osx-arm64
           - win-64
 
-# Add concurrency control
 concurrency:
   group: >-
     ${{ github.workflow }}-
@@ -71,82 +55,22 @@ jobs:
       platform: ${{ steps.parse.outputs.platform }}
       should_run: ${{ steps.parse.outputs.should_run }}
     steps:
-      - name: Check user permissions
-        id: check_permission
-        run: |
-          # Check if the comment author has write access to the repository
-          response=$(curl -s -w "%{http_code}" \
-            -H "Accept: application/vnd.github+json" \
-            -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
-            -H "X-GitHub-Api-Version: 2022-11-28" \
-            "https://api.github.com/repos/${{ github.repository }}/collaborators/${{ github.event.comment.user.login }}/permission" \
-            -o /tmp/permission_response.json)
-          
-          http_code="${response: -3}"
-          echo "HTTP response code: $http_code"
-          
-          if [ "$http_code" = "200" ]; then
-            permission=$(jq -r '.permission' /tmp/permission_response.json)
-            echo "User permission: $permission"
-            
-            if [[ "$permission" =~ ^(admin|write)$ ]]; then
-              echo "has_permission=true" >> $GITHUB_OUTPUT
-              echo "✅ User ${{ github.event.comment.user.login }} has $permission permission"
-            else
-              echo "has_permission=false" >> $GITHUB_OUTPUT
-              echo "❌ User ${{ github.event.comment.user.login }} has $permission permission (need admin/write)"
-            fi
-          else
-            echo "has_permission=false" >> $GITHUB_OUTPUT
-            echo "❌ Failed to check permissions for ${{ github.event.comment.user.login }} (HTTP $http_code)"
-          fi
-
       - name: Parse comment
         id: parse
-        if: steps.check_permission.outputs.has_permission == 'true'
         run: |
           comment="${{ github.event.comment.body }}"
-          echo "Parsing comment: $comment"
-          
-          # Check if comment starts with the trigger
           if [[ "$comment" =~ ^/gha\ run\ conda ]]; then
             echo "should_run=true" >> $GITHUB_OUTPUT
-            
-            # Extract llvmdev_run_id if provided (pattern: /gha run conda <run_id>)
             if [[ "$comment" =~ ^/gha\ run\ conda\ ([0-9]+) ]]; then
               llvmdev_run_id="${BASH_REMATCH[1]}"
               echo "llvmdev_run_id=$llvmdev_run_id" >> $GITHUB_OUTPUT
-              echo "Found llvmdev_run_id: $llvmdev_run_id"
             else
               echo "llvmdev_run_id=" >> $GITHUB_OUTPUT
-              echo "No llvmdev_run_id provided"
             fi
-            
-            # Default platform to 'all' for comment triggers
             echo "platform=all" >> $GITHUB_OUTPUT
           else
             echo "should_run=false" >> $GITHUB_OUTPUT
           fi
-
-      - name: Add permission denied reaction
-        if: steps.check_permission.outputs.has_permission == 'false'
-        run: |
-          curl -L \
-            -X POST \
-            -H "Accept: application/vnd.github+json" \
-            -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
-            -H "X-GitHub-Api-Version: 2022-11-28" \
-            https://api.github.com/repos/${{ github.repository }}/issues/comments/${{ github.event.comment.id }}/reactions \
-            -d '{"content":"confused"}'
-          
-          # Add a reply comment explaining the permission requirement
-          curl -L \
-            -X POST \
-            -H "Accept: application/vnd.github+json" \
-            -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
-            -H "X-GitHub-Api-Version: 2022-11-28" \
-            https://api.github.com/repos/${{ github.repository }}/issues/${{ github.event.issue.number }}/comments \
-            -d "{\"body\":\"❌ @${{ github.event.comment.user.login }} Sorry, only repository collaborators with write access can trigger conda builds via comments for security reasons.\"}"
 
       - name: Add reaction to comment
         if: steps.parse.outputs.should_run == 'true'
@@ -154,7 +78,7 @@ jobs:
           curl -L \
             -X POST \
             -H "Accept: application/vnd.github+json" \
-            -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+            -H "Authorization: Bearer ${{ github.token }}" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
             https://api.github.com/repos/${{ github.repository }}/issues/comments/${{ github.event.comment.id }}/reactions \
             -d '{"content":"rocket"}'
@@ -163,7 +87,7 @@ jobs:
     runs-on: ubuntu-24.04
     if: >-
       always() && (
-        github.event_name != 'issue_comment' || 
+        github.event_name != 'issue_comment' ||
         (needs.parse-comment.result == 'success' && needs.parse-comment.outputs.should_run == 'true')
       )
     needs: [parse-comment]
@@ -172,9 +96,8 @@ jobs:
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
-          # For comment triggers, checkout the PR branch
           ref: ${{ github.event_name == 'issue_comment' && format('refs/pull/{0}/head', github.event.issue.number) || github.ref }}
-          
+
       - uses: actions/setup-python@a26af69be951a213d495a4c3e4e4022e16d87065 # v5.6.0
         with:
           python-version: '3.13'
@@ -183,19 +106,14 @@ jobs:
         env:
           GITHUB_EVENT_NAME: ${{ github.event_name }}
           GITHUB_WORKFLOW_INPUT: >-
-            ${{ github.event_name == 'issue_comment' && 
-                format('{{"llvmdev_run_id":"{0}","platform":"{1}"}}', 
-                       needs.parse-comment.outputs.llvmdev_run_id, 
+            ${{ github.event_name == 'issue_comment' &&
+                format('{{"llvmdev_run_id":"{0}","platform":"{1}"}}',
+                       needs.parse-comment.outputs.llvmdev_run_id,
                        needs.parse-comment.outputs.platform) ||
                 toJson(github.event.inputs) }}
         run: |
           set -ex
-          echo "=== Environment ==="
-          echo "Event: $GITHUB_EVENT_NAME"
-          echo "Inputs: $GITHUB_WORKFLOW_INPUT"
-          echo "=== Running evaluation script ==="
           ./buildscripts/github/llvmlite_evaluate.py
-          echo "=== Evaluation completed ==="
 
   build:
     needs: [parse-comment, check]
@@ -213,7 +131,6 @@ jobs:
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
           fetch-depth: 0
-          # For comment triggers, checkout the PR branch
           ref: ${{ github.event_name == 'issue_comment' && format('refs/pull/{0}/head', github.event.issue.number) || github.ref }}
 
       - name: Setup platform-specific requirements
