--- a/.github/workflows/llvmlite_conda_builder.yml
+++ b/.github/workflows/llvmlite_conda_builder.yml
@@ -27,6 +27,11 @@ on:
           - osx-arm64
           - win-64
 
+# permissions for issue_comment events to read workflow runs and write comments on PRs
+permissions:
+  contents: read
+  pull-requests: write
+
 # Add concurrency control
 concurrency:
   group: >-
@@ -45,11 +50,45 @@ jobs:
     runs-on: ubuntu-24.04
     outputs:
       matrix: ${{ steps.evaluate.outputs.matrix }}
+      pr_comment_trigger_ref: ${{ steps.cmd.outputs.ref }}
+      pr_comment_trigger_status: ${{ steps.cmd.outputs.continue }}
+      pr_comment_llvmdev_runid: ${{ steps.cmd.outputs.params }}
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
       - uses: actions/setup-python@a26af69be951a213d495a4c3e4e4022e16d87065 # v5.6.0
         with:
           python-version: '3.13'
+
+      - name: PR Comment Command Check
+        uses: github/command@v1
+        id: cmd
+        if: ${{ github.event_name == 'issue_comment' }}
+        with:
+          command: "/gha llvmlite"
+          reaction: "rocket"
+          allowed_contexts: pull_request
+          allow_forks: true
+          param_separator: " "
+
+      - name: Post Success Comment for PR Comment Trigger
+        if: ${{ github.event_name == 'issue_comment' && steps.cmd.outputs.continue == 'true' }}
+        env:
+          GH_TOKEN: ${{ github.token }}
+        run: |
+          RUN_URL="${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"
+          BODY="Workflow triggered. <br> Run link: $RUN_URL"
+          gh pr comment ${{ steps.cmd.outputs.issue_number }} --body "$BODY"
+
+
+      - name: Post Failure Comment for PR Comment Trigger
+        if: ${{ github.event_name == 'issue_comment' && steps.cmd.outputs.continue != 'true' }}
+        env:
+          GH_TOKEN: ${{ github.token }}
+        run: |
+          RUN_URL="${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"
+          BODY="Command failed. <br> Check run logs: $RUN_URL"
+          gh pr comment ${{ steps.cmd.outputs.issue_number }} --body "$BODY"
+
       - name: Evaluate
         id: evaluate
         env:
@@ -80,6 +119,7 @@ jobs:
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
           fetch-depth: 0
+          ref: ${{ github.event_name == 'issue_comment' && needs.check.outputs.pr_comment_trigger_ref || github.ref }}
 
       - name: Setup platform-specific requirements
         if: matrix.platform == 'osx-64'
@@ -97,12 +137,12 @@ jobs:
         run: conda install conda-build
 
       - name: Download llvmdev Artifact
-        if: ${{ inputs.llvmdev_run_id != '' }}
+        if: ${{ inputs.llvmdev_run_id != '' || needs.check.outputs.pr_comment_llvmdev_runid != '' }}
         uses: actions/download-artifact@d3f86a106a0bac45b974a628896c90dbdf5c8093 # v4.3.0
         with:
           name: llvmdev_${{ matrix.platform }}
           path: llvmdev_conda_packages
-          run-id: ${{ inputs.llvmdev_run_id }}
+          run-id: ${{ github.event_name == 'workflow_dispatch' && inputs.llvmdev_run_id || (github.event_name == 'issue_comment' && needs.check.outputs.pr_comment_llvmdev_runid) || '' }}
           repository: ${{ github.repository }}
           github-token: ${{ secrets.GITHUB_TOKEN }}
 
