--- a/.github/workflows/llvmdev_build.yml
+++ b/.github/workflows/llvmdev_build.yml
@@ -1,6 +1,8 @@
 name: llvmdev
 
 on:
+  issue_comment:
+    types: [created, edited]
   pull_request:
     paths:
       - .github/workflows/llvmdev_build.yml
@@ -54,11 +56,43 @@ jobs:
     runs-on: ubuntu-24.04
     outputs:
       matrix: ${{ steps.evaluate.outputs.matrix }}
+      pr_comment_trigger_ref: ${{ steps.cmd.outputs.ref }}
+      pr_comment_trigger_status: ${{ steps.cmd.outputs.continue }}
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
       - uses: actions/setup-python@a26af69be951a213d495a4c3e4e4022e16d87065 # v5.6.0
         with:
           python-version: '3.13'
+
+      - name: PR Comment Command Check
+        uses: github/command@v1
+        id: cmd
+        if: ${{ github.event_name == 'issue_comment' }}
+        with:
+          command: "/gha llvmdev"
+          reaction: "rocket"
+          allowed_contexts: pull_request
+          allow_forks: true
+          param_separator: " "
+
+      - name: Post Success Comment for PR Comment Trigger
+        if: ${{ github.event_name == 'issue_comment' && steps.cmd.outputs.continue == 'true' }}
+        env:
+          GH_TOKEN: ${{ github.token }}
+        run: |
+          RUN_URL="${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"
+          BODY="Workflow triggered. <br> Run link: $RUN_URL"
+          gh pr comment ${{ steps.cmd.outputs.issue_number }} --body "$BODY"
+
+      - name: Post Failure Comment for PR Comment Trigger
+        if: ${{ github.event_name == 'issue_comment' && steps.cmd.outputs.continue != 'true' }}
+        env:
+          GH_TOKEN: ${{ github.token }}
+        run: |
+          RUN_URL="${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"
+          BODY="Command failed. <br> Check run logs: $RUN_URL"
+          gh pr comment ${{ steps.cmd.outputs.issue_number }} --body "$BODY"
+
       - name: Evaluate
         id: evaluate
         env:
@@ -80,21 +114,11 @@ jobs:
       fail-fast: false
 
     steps:
-      - name: Command Check
-        uses: github/command@v1
-        id: cmd
-        if: ${{ github.event_name == 'issue_comment' }}
-        with:
-          command: "/gha llvmdev"
-          reaction: "rocket"
-          allowed_contexts: pull_request
-          allow_forks: true
-          param_separator: " "
 
       - name: Clone repository
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
-          ref: ${{ github.event_name == 'issue_comment' && steps.cmd.outputs.ref || github.ref }}
+          ref: ${{ github.event_name == 'issue_comment' && needs.check.outputs.pr_comment_trigger_ref || github.ref }}
 
       - name: Setup platform-specific requirements
         run: |
