--- a/.github/workflows/llvmdev_build.yml
+++ b/.github/workflows/llvmdev_build.yml
@@ -57,7 +57,7 @@ jobs:
     outputs:
       matrix: ${{ steps.evaluate.outputs.matrix }}
       pr_comment_trigger_ref: ${{ steps.cmd.outputs.ref }}
-      pr_comment_trigger_status: ${{ steps.cmd.outputs.continue }}
+      pr_comment_trigger_status: ${{ steps.validator.outputs.should_run }}
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
       - uses: actions/setup-python@a26af69be951a213d495a4c3e4e4022e16d87065 # v5.6.0
@@ -69,14 +69,38 @@ jobs:
         id: cmd
         if: ${{ github.event_name == 'issue_comment' }}
         with:
-          command: "/gha llvmdev"
+          command: "/gha"
           reaction: "rocket"
           allowed_contexts: pull_request
           allow_forks: true
           param_separator: " "
 
+      - name: Validate command
+        id: validator
+        if: ${{ github.event_name == 'issue_comment' }}
+        run: |
+          SHOULD_RUN="false"
+          PARAMS_JSON="{}"
+          # Default values
+          PLATFORM="all"
+          RECIPE="all"
+
+          PARAMS=(${{ steps.cmd.outputs.params }})
+          if [[ "${{ steps.cmd.outputs.continue }}" == "true" && "${PARAMS[0]}" == "llvmdev" ]]; then
+            SHOULD_RUN="true"
+            for param in "${PARAMS[@]:1}"; do
+              case "$param" in
+                platform=*) PLATFORM="${param#*=}" ;;
+                recipe=*) RECIPE="${param#*=}" ;;
+              esac
+            done
+          fi
+          PARAMS_JSON=$(printf '{"platform": "%s", "recipe": "%s"}' "$PLATFORM" "$RECIPE")
+          echo "should_run=$SHOULD_RUN" >> $GITHUB_OUTPUT
+          echo "command_params_json=$PARAMS_JSON" >> $GITHUB_OUTPUT
+
       - name: Post Success Comment for PR Comment Trigger
-        if: ${{ github.event_name == 'issue_comment' && steps.cmd.outputs.continue == 'true' }}
+        if: ${{ github.event_name == 'issue_comment' && steps.validator.outputs.should_run == 'true' }}
         env:
           GH_TOKEN: ${{ github.token }}
         run: |
@@ -85,7 +109,7 @@ jobs:
           gh pr comment ${{ steps.cmd.outputs.issue_number }} --body "$BODY"
 
       - name: Post Failure Comment for PR Comment Trigger
-        if: ${{ github.event_name == 'issue_comment' && steps.cmd.outputs.continue != 'true' }}
+        if: ${{ github.event_name == 'issue_comment' && steps.validator.outputs.should_run != 'true' }}
         env:
           GH_TOKEN: ${{ github.token }}
         run: |
@@ -94,16 +118,18 @@ jobs:
           gh pr comment ${{ steps.cmd.outputs.issue_number }} --body "$BODY"
 
       - name: Evaluate
+        if: ${{ github.event_name != 'issue_comment' || steps.validator.outputs.should_run == 'true' }}
         id: evaluate
         env:
           GITHUB_EVENT_NAME: ${{ github.event_name }}
           GITHUB_LABEL_NAME: ${{ github.event.label.name }}
-          GITHUB_WORKFLOW_INPUT: ${{ toJson(github.event.inputs) }}
+          GITHUB_WORKFLOW_INPUT: ${{ (github.event_name == 'issue_comment' && steps.validator.outputs.command_params_json) || toJson(github.event.inputs) }}
         run: |
           ./buildscripts/github/llvmdev_evaluate.py
 
   build:
     needs: check
+    if: ${{ github.event_name != 'issue_comment' || needs.check.outputs.pr_comment_trigger_status != 'false' }}
     name: ${{ matrix.recipe }}-${{ matrix.platform }}
     runs-on: ${{ matrix.runner }}
     defaults:
