--- a/.github/workflows/llvmlite_conda_builder.yml
+++ b/.github/workflows/llvmlite_conda_builder.yml
@@ -53,8 +53,8 @@ jobs:
     outputs:
       matrix: ${{ steps.evaluate.outputs.matrix }}
       pr_comment_trigger_ref: ${{ steps.cmd.outputs.ref }}
-      pr_comment_trigger_status: ${{ steps.cmd.outputs.continue }}
-      pr_comment_llvmdev_runid: ${{ steps.cmd.outputs.params }}
+      pr_comment_trigger_status: ${{ steps.validator.outputs.should_run }}
+      pr_comment_llvmdev_runid: ${{ steps.validator.outputs.llvmdev_runid }}
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
       - uses: actions/setup-python@a26af69be951a213d495a4c3e4e4022e16d87065 # v5.6.0
@@ -66,14 +66,39 @@ jobs:
         id: cmd
         if: ${{ github.event_name == 'issue_comment' }}
         with:
-          command: "/gha llvmlite"
+          command: "/gha"
           reaction: "rocket"
           allowed_contexts: pull_request
           allow_forks: true
           param_separator: " "
 
+      - name: Validate command
+        id: validator
+        if: ${{ github.event_name == 'issue_comment' }}
+        run: |
+          SHOULD_RUN="false"
+          PARAMS_JSON="{}"
+          LLVMDEV_RUN_ID=""
+          # Default values
+          PLATFORM="all"
+
+          PARAMS=(${{ steps.cmd.outputs.params }})
+          if [[ "${{ steps.cmd.outputs.continue }}" == "true" && "${PARAMS[0]}" == "llvmlite" ]]; then
+            SHOULD_RUN="true"
+            for param in "${PARAMS[@]:1}"; do
+              case "$param" in
+                platform=*) PLATFORM="${param#*=}" ;;
+                llvmdev_run_id=*) LLVMDEV_RUN_ID="${param#*=}" ;;
+              esac
+            done
+          fi
+          PARAMS_JSON=$(printf '{"platform": "%s", "llvmdev_run_id": "%s"}' "$PLATFORM" "$LLVMDEV_RUN_ID")
+          echo "should_run=$SHOULD_RUN" >> $GITHUB_OUTPUT
+          echo "command_params_json=$PARAMS_JSON" >> $GITHUB_OUTPUT
+          echo "llvmdev_runid=$LLVMDEV_RUN_ID" >> $GITHUB_OUTPUT
+
       - name: Post Success Comment for PR Comment Trigger
-        if: ${{ github.event_name == 'issue_comment' && steps.cmd.outputs.continue == 'true' }}
+        if: ${{ github.event_name == 'issue_comment' && steps.validator.outputs.should_run == 'true' }}
         env:
           GH_TOKEN: ${{ github.token }}
         run: |
@@ -83,7 +108,7 @@ jobs:
 
 
       - name: Post Failure Comment for PR Comment Trigger
-        if: ${{ github.event_name == 'issue_comment' && steps.cmd.outputs.continue != 'true' }}
+        if: ${{ github.event_name == 'issue_comment' && steps.validator.outputs.should_run != 'true' }}
         env:
           GH_TOKEN: ${{ github.token }}
         run: |
@@ -92,15 +117,18 @@ jobs:
           gh pr comment ${{ steps.cmd.outputs.issue_number }} --body "$BODY"
 
       - name: Evaluate
+        if: ${{ github.event_name != 'issue_comment' || steps.validator.outputs.should_run == 'true' }}
         id: evaluate
         env:
           GITHUB_EVENT_NAME: ${{ github.event_name }}
-          GITHUB_WORKFLOW_INPUT: ${{ toJson(github.event.inputs) }}
+          GITHUB_WORKFLOW_INPUT: ${{ (github.event_name == 'issue_comment' && steps.validator.outputs.command_params_json) || toJson(github.event.inputs) }}
+          GITHUB_COMMAND_PARAMS_JSON: ${{ steps.validator.outputs.command_params_json }}
         run: |
           set -ex
           echo "=== Environment ==="
           echo "Event: $GITHUB_EVENT_NAME"
           echo "Inputs: $GITHUB_WORKFLOW_INPUT"
+          echo "Command Params JSON: ${{ steps.validator.outputs.command_params_json }}"
           echo "=== Running evaluation script ==="
           ./buildscripts/github/llvmlite_evaluate.py
           echo "=== Evaluation completed ==="
