--- a/.github/workflows/llvmlite_conda_builder.yml
+++ b/.github/workflows/llvmlite_conda_builder.yml
@@ -83,7 +83,7 @@ jobs:
           PLATFORM="all"
 
           PARAMS=(${{ steps.cmd.outputs.params }})
-          echo "PARAMS: ${PARAMS[@]}"
+          echo "PARAMS: ${PARAMS[*]}"
           if [[ "${{ steps.cmd.outputs.continue }}" == "true" ]]; then
             SHOULD_RUN="true"
             for param in "${PARAMS[@]}"; do
