--- a/.github/workflows/llvmlite_conda_builder.yml
+++ b/.github/workflows/llvmlite_conda_builder.yml
@@ -74,9 +74,9 @@ jobs:
 
       - name: Validate command
         id: validator
-        if: ${{ github.event_name == 'issue_comment' }}
+        if: ${{ github.event_name == 'issue_comment' && steps.cmd.outputs.continue == 'true' }}
         run: |
-          SHOULD_RUN="false"
+          SHOULD_RUN="true"
           PARAMS_JSON="{}"
           LLVMDEV_RUN_ID=""
           # Default values
@@ -84,15 +84,12 @@ jobs:
 
           PARAMS=(${{ steps.cmd.outputs.params }})
           echo "PARAMS: ${PARAMS[*]}"
-          if [[ "${{ steps.cmd.outputs.continue }}" == "true" ]]; then
-            SHOULD_RUN="true"
-            for param in "${PARAMS[@]}"; do
-              case "$param" in
-                platform=*) PLATFORM="${param#*=}" ;;
-                llvmdev_run_id=*) LLVMDEV_RUN_ID="${param#*=}" ;;
-              esac
-            done
-          fi
+          for param in "${PARAMS[@]}"; do
+            case "$param" in
+              platform=*) PLATFORM="${param#*=}" ;;
+              llvmdev_run_id=*) LLVMDEV_RUN_ID="${param#*=}" ;;
+            esac
+          done
           PARAMS_JSON=$(printf '{"platform": "%s", "llvmdev_run_id": "%s"}' "$PLATFORM" "$LLVMDEV_RUN_ID")
           {
             echo "should_run=$SHOULD_RUN"
@@ -111,7 +108,7 @@ jobs:
 
 
       - name: Post Failure Comment for PR Comment Trigger
-        if: ${{ github.event_name == 'issue_comment' && steps.validator.outputs.should_run != 'true' }}
+        if: ${{ github.event_name == 'issue_comment' && steps.cmd.outputs.continue == 'true' && steps.validator.outputs.should_run != 'true' }}
         env:
           GH_TOKEN: ${{ github.token }}
         run: |
