update condition checks on workflows to ensure builds and tests are triggered correctly based on issue comment status

--- a/.github/workflows/llvmdev_build.yml
+++ b/.github/workflows/llvmdev_build.yml
@@ -127,7 +127,7 @@ jobs:
 
   build:
     needs: check
-    if: ${{ github.event_name != 'issue_comment' || needs.check.outputs.pr_comment_trigger_status != 'false' }}
+    if: ${{ (github.event_name == 'issue_comment' && needs.check.outputs.pr_comment_trigger_status == 'true') || github.event_name != 'issue_comment' }}
     name: ${{ matrix.recipe }}-${{ matrix.platform }}
     runs-on: ${{ matrix.runner }}
     defaults:
