--- a/.github/workflows/llvmlite_conda_builder.yml
+++ b/.github/workflows/llvmlite_conda_builder.yml
@@ -49,6 +49,9 @@ env:
 
 jobs:
   check:
+    if: |
+      github.event_name != 'issue_comment' ||
+      contains(github.event.comment.body, '/gha llvmlite')
     runs-on: ubuntu-24.04
     outputs:
       matrix: ${{ steps.evaluate.outputs.matrix }}
