--- a/conda-recipes/llvmlite/conda_build_config.yaml
+++ b/conda-recipes/llvmlite/conda_build_config.yaml
@@ -1,15 +1,14 @@
 # Numba/llvmlite stack needs an older compiler for backwards compatability.
-c_compiler_version:         # [linux]
-  - 7                       # [linux and (x86_64 or ppc64le)]
-  - 11                      # [linux and aarch64]
+c_compiler_version:         # [linux or osx]
+  - 11                      # [linux]
+  - 14                      # [osx]
 
-cxx_compiler_version:       # [linux]
-  - 7                       # [linux and (x86_64 or ppc64le)]
-  - 11                      # [linux and aarch64]
+cxx_compiler_version:       # [linux or osx]
+  - 11                      # [linux]
+  - 14                      # [osx]
 
 fortran_compiler_version:   # [linux]
-  - 7                       # [linux and (x86_64 or ppc64le)]
-  - 11                      # [linux and aarch64]
+  - 11                      # [linux]
 
 c_compiler:              # [win]
   - vs2022               # [win]
