ci/update osx 64 sdk (#93)
* replace MacOSX10.10 SDK with MacOSX10.15 SDK on setup script and update checksum

* update MACOSX_SDK_VERSION to 10.15 and set CONDA_BUILD_SYSROOT for consistency

* simplify conda build command, remove CONDA_BUILD_SYSROOT variant arg

--- a/.github/workflows/llvmdev_build.yml
+++ b/.github/workflows/llvmdev_build.yml
@@ -141,11 +141,7 @@ jobs:
         run: |
           set -x
           mkdir -p "${CONDA_CHANNEL_DIR}"
-          EXTRA_ARGS=()
-          if [[ "${{ matrix.platform }}" == "osx-64" ]]; then
-            EXTRA_ARGS=(--variants '{"CONDA_BUILD_SYSROOT": "/opt/MacOSX10.10.sdk"}')
-          fi
-          conda build "./conda-recipes/${{ matrix.recipe }}" "--output-folder=${CONDA_CHANNEL_DIR}" "${EXTRA_ARGS[@]}"
+          conda build "./conda-recipes/${{ matrix.recipe }}" "--output-folder=${CONDA_CHANNEL_DIR}"
           ls -lah "${CONDA_CHANNEL_DIR}"
 
       - name: Upload conda package
