--- a/conda-recipes/llvmlite/conda_build_config.yaml
+++ b/conda-recipes/llvmlite/conda_build_config.yaml
@@ -15,5 +15,8 @@ c_compiler:              # [win]
 cxx_compiler:            # [win]
   - vs2022               # [win]
 
+MACOSX_SDK_VERSION:    # [osx and x86_64]
+  - 10.15              # [osx and x86_64]
+
 CONDA_BUILD_SYSROOT:
-  - /opt/MacOSX10.10.sdk  # [osx and x86_64]
+  - /opt/MacOSX10.15.sdk        # [osx and x86_64]
