use ad-testing channel for py314 on setup-miniconda

--- a/.github/workflows/llvmlite_win-64_wheel_builder.yml
+++ b/.github/workflows/llvmlite_win-64_wheel_builder.yml
@@ -52,6 +52,7 @@ jobs:
           conda-remove-defaults: true
           auto-update-conda: true
           auto-activate-base: true
+          channels: ${{ matrix.python-version == '3.14' && 'ad-testing/label/py314' || '' }}
 
       - name: Download llvmdev Artifact
         if: ${{ inputs.llvmdev_run_id != '' }}
