fix lint issues

--- a/.github/workflows/llvmlite_conda_builder.yml
+++ b/.github/workflows/llvmlite_conda_builder.yml
@@ -117,7 +117,7 @@ jobs:
           fi
           CONDA_CHANNEL_DIR="conda_channel_dir"
           mkdir $CONDA_CHANNEL_DIR
-          conda build --debug -c "$LLVMDEV_CHANNEL" $EXTRA_CHANNELS -c defaults --python=${{ matrix.python-version }} conda-recipes/llvmlite --output-folder=$CONDA_CHANNEL_DIR --no-test
+          conda build --debug -c "$LLVMDEV_CHANNEL" "$EXTRA_CHANNELS" -c defaults --python=${{ matrix.python-version }} conda-recipes/llvmlite --output-folder="${CONDA_CHANNEL_DIR}" --no-test
 
       - name: Upload llvmlite conda package
         uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4.6.2
@@ -157,4 +157,4 @@ jobs:
         run: conda install conda-build
 
       - name: Run tests
-        run: conda build --test $EXTRA_CHANNELS ${{ matrix.platform }}/llvmlite*.conda
+        run: conda build --test "$EXTRA_CHANNELS" ${{ matrix.platform }}/llvmlite*.conda
