use explicit channel specification for llvmdev=20 installation

--- a/.github/workflows/llvmlite_osx-arm64_wheel_builder.yml
+++ b/.github/workflows/llvmlite_osx-arm64_wheel_builder.yml
@@ -74,7 +74,7 @@ jobs:
           else
               CHAN="${{ env.CONDA_CHANNEL_NUMBA }}"
           fi
-          conda install -c "$CHAN" -c defaults llvmdev="${{ env.FALLBACK_LLVMDEV_VERSION }}"
+          conda install -c defaults "$CHAN"::llvmdev="${{ env.FALLBACK_LLVMDEV_VERSION }}"
           python -m pip install --upgrade pip build
 
           # Hide libunwind to prevent it from being linked against during build
